force-app/main/default/objects/PC_Time_Slot__c/PC_Time_Slot__c.object-meta.xml
<CustomObject>
    <description>Object to collect specific information for coverage hours and exceptions.</description>
    <label>PrC Time Slot</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Time Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrC Time Slots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>