force-app/main/default/objects/PC_Time_Slot__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A specialist&apos;s availability</description>
    <label>Availability</label>
    <referenceTo>PC_Specialist_Availability__c</referenceTo>
    <relationshipLabel>PC_Time Slots</relationshipLabel>
    <relationshipName>PC_Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>