force-app/main/default/objects/PC_Time_Slot__c/fields/PC_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>