force-app/main/default/objects/PC_Time_Slot__c/fields/PC_End__c.field-meta.xml
<CustomField>
    <fullName>PC_End__c</fullName>
    <defaultValue>TIMEVALUE(&quot;17:00:00.000&quot;)</defaultValue>
    <label>End Time</label>
    <type>Time</type>
</CustomField>