force-app/main/default/objects/PC_Time_Slot__c/fields/PC_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>PC_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>PC_Operating_Hours__c</referenceTo>
    <relationshipLabel>PC_Time Slots</relationshipLabel>
    <relationshipName>Time_Slot</relationshipName>
    <type>Lookup</type>
</CustomField>