force-app/main/default/objects/PC_Time_Slot__c/fields/PC_Start__c.field-meta.xml
<CustomField>
    <fullName>PC_Start__c</fullName>
    <defaultValue>TIMEVALUE(&quot;08:00:00.000&quot;)</defaultValue>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>